[gd_scene load_steps=23 format=2]

[ext_resource path="res://sprites/delta1_1.png" type="Texture" id=1]
[ext_resource path="res://scripts/player/PlayerMovement.gd" type="Script" id=2]
[ext_resource path="res://scripts/ui/NumCounter.gd" type="Script" id=3]
[ext_resource path="res://VT323-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://scripts/player/PlayerGun.gd" type="Script" id=5]
[ext_resource path="res://mainscenes/PlayerHB.gd" type="Script" id=6]
[ext_resource path="res://utils/output.BMP" type="Texture" id=7]
[ext_resource path="res://audio/damaged.wav" type="AudioStream" id=9]
[ext_resource path="res://scenes/Health.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/Enemy1.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/Asteroid.tscn" type="PackedScene" id=12]
[ext_resource path="res://audio/invasion-1.mp3" type="AudioStream" id=13]
[ext_resource path="res://scripts/player/PlayerHealth.gd" type="Script" id=14]
[ext_resource path="res://scenes/Bullet.tscn" type="PackedScene" id=15]
[ext_resource path="res://audio/lasershoot.wav" type="AudioStream" id=16]
[ext_resource path="res://scripts/Game.gd" type="Script" id=19]
[ext_resource path="res://scripts/EnemySpawner.gd" type="Script" id=20]

[sub_resource type="DynamicFont" id=2]
size = 36
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 36
outline_size = 5
outline_color = Color( 0, 0.32549, 0.192157, 1 )
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.564706, 1, 0.960784, 1 )
shadow_offset = Vector2( 5, 5 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="Animation" id=5]
resource_name = "FadeOut"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("FadeOut/CanvasModulate:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}

[node name="Game" type="Node2D"]
script = ExtResource( 19 )

[node name="UIDraw" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="UIDraw"]
anchor_left = 0.156
anchor_top = 0.153
anchor_right = 0.156
anchor_bottom = 0.153
margin_left = -149.76
margin_top = -83.232
margin_right = 810.24
margin_bottom = 460.768

[node name="ColorRect" type="ColorRect" parent="UIDraw/HUD"]
margin_left = 7.0
margin_top = 490.0
margin_right = 686.0
margin_bottom = 538.0
color = Color( 0, 0, 0, 0.423529 )

[node name="AmmoDisp" type="Label" parent="UIDraw/HUD"]
margin_left = 343.0
margin_top = 493.0
margin_right = 534.0
margin_bottom = 544.0
custom_fonts/font = SubResource( 2 )
text = "Ammo: "
script = ExtResource( 3 )
prefix = "Ammo: "

[node name="ScoreCounter" type="Label" parent="UIDraw/HUD"]
margin_left = 21.0
margin_top = 14.0
margin_right = 212.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 4 )
text = "Score:"
script = ExtResource( 3 )
prefix = "Score: "

[node name="HealthDisp" type="Label" parent="UIDraw/HUD"]
margin_left = 14.0
margin_top = 494.0
margin_right = 205.0
margin_bottom = 545.0
custom_fonts/font = SubResource( 2 )
text = "Health:"
script = ExtResource( 3 )
prefix = "Health: "

[node name="PlayerHB" type="ProgressBar" parent="UIDraw/HUD"]
margin_left = 117.0
margin_top = 501.0
margin_right = 325.0
margin_bottom = 526.0
custom_styles/fg = SubResource( 6 )
custom_styles/bg = SubResource( 7 )
value = 50.0
percent_visible = false
script = ExtResource( 6 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Output" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 126, 202 )
texture = ExtResource( 7 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 480, 278 )
scale = Vector2( 4, 4 )
current = true

[node name="FadeOut" type="AnimationPlayer" parent="."]
anims/FadeOut = SubResource( 5 )

[node name="CanvasModulate" type="CanvasModulate" parent="FadeOut"]

[node name="Delta1" type="Area2D" parent="." groups=["player"]]
position = Vector2( 480, 278 )
scale = Vector2( 4, 4 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
player_speed = 400

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Delta1"]
remote_path = NodePath("../../Camera2D")
update_rotation = false
update_scale = false

[node name="PlayerHitbox" type="CollisionPolygon2D" parent="Delta1"]
polygon = PoolVector2Array( 10, 5, 10, 7.33333, 0, 10, -10, 7.66666, -10, 5, -7, -2.33334, 0, -11, 7, -2.33334 )

[node name="Sprite" type="Sprite" parent="Delta1"]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )

[node name="Gun" type="Node2D" parent="Delta1"]
position = Vector2( 0, -10 )
script = ExtResource( 5 )
reload_time_seconds = 5.0
shoot_cooldown_secs = 0.4
shoot_speed = 2200.0
shoot_direction = Vector2( 0, 1 )
bullet_prefab = ExtResource( 15 )

[node name="ShootSounder" type="AudioStreamPlayer" parent="Delta1/Gun"]
stream = ExtResource( 16 )
bus = "SFX"

[node name="Health" parent="Delta1" instance=ExtResource( 10 )]
script = ExtResource( 14 )
starting_health = 4

[node name="PlayerDamageSounder" type="AudioStreamPlayer" parent="Delta1/Health"]
stream = ExtResource( 9 )
bus = "SFX"

[node name="AsteroidSpawner" type="Node2D" parent="."]
position = Vector2( 619, -236 )
script = ExtResource( 20 )
score = 100
spawn_rate = 200
spawn_x_min = 350
spawn_x_max = 890
enemy_scene = ExtResource( 12 )

[node name="EnemySpawner" type="Node2D" parent="."]
position = Vector2( 619, 101 )
script = ExtResource( 20 )
score = 200
spawn_rate = 240
spawn_x_min = 350
spawn_x_max = 890
enemy_scene = ExtResource( 11 )

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )

[connection signal="score_changed" from="." to="UIDraw/HUD/ScoreCounter" method="on_update_value"]
[connection signal="animation_finished" from="FadeOut" to="." method="faded_out"]
[connection signal="area_entered" from="Delta1" to="Delta1/Health" method="_on_Delta1_area_entered"]
[connection signal="update_ammo_count" from="Delta1/Gun" to="UIDraw/HUD/AmmoDisp" method="on_update_value"]
[connection signal="init_healthbar" from="Delta1/Health" to="UIDraw/HUD/PlayerHB" method="init_healthbar"]
[connection signal="on_health_change" from="Delta1/Health" to="UIDraw/HUD/PlayerHB" method="on_health_change"]
